fix: map z-index

--- a/style.css
+++ b/style.css
@@ -275,6 +275,7 @@ h3 + p {
   height: 520px;
   margin-top: 48px;
   margin-left: 320px;
+  z-index: 0;
 }
 
 .subscribe {
